--- a/new 1.html
+++ b/new 1.html
@@ -9,13 +9,15 @@
 	color: red;
 	margin: auto;
 	font-size:30px;
-	background-color: black;
 	text-align:center;
 	}
+	body{
+	background-color: powderblue;
+	}
 	ol{
-	background-color: lightblue;
 	font-size: 20px;
 	}
+	
 	
 	</style>
 </head>
